--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "express": "^4.16.4",
     "nodemon": "^1.18.11",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "pg": "^7.10.0",
+    "sequelize": "^5.7.5"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -18,6 +20,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "sequelize-cli": "^5.4.0",
     "yarn": "^1.15.2"
   },
   "repository": "https://github.com/heltondenis/backend_app_go_barber.git",
