--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "connect-loki": "^1.1.0",
     "express": "^4.16.4",
-    "express-session": "^1.15.6",
+    "express-session": "^1.16.1",
     "moment": "^2.22.2",
     "multer": "^1.4.1",
     "mysql2": "^1.6.5",
